k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-php
  labels:
    app.kubernetes.io/name: helloworld-php
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: helloworld-php
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-php
  labels:
    app.kubernetes.io/name: helloworld-php
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: helloworld-php
  template:
    metadata:
      labels:
        app.kubernetes.io/name: helloworld-php
    spec:
      serviceAccountName: helloworld-php
      terminationGracePeriodSeconds: 10
      containers:
        - name: helloworld-php
          image: "hatsunemiku/helloworld-php:latest"
          imagePullPolicy: Always
          ports:
            - name: fastcgi
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 30
            tcpSocket:
              port: fastcgi
          readinessProbe:
            initialDelaySeconds: 30
            tcpSocket:
              port: fastcgi
        - name: helloworld-php-nginx
          image: "nginxinc/nginx-unprivileged:1.16"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: status
              containerPort: 8081
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
              name: nginx-conf
          livenessProbe:
            initialDelaySeconds: 30
            httpGet:
              path: /nginx_status
              port: status
          readinessProbe:
            initialDelaySeconds: 30
            httpGet:
              path: /nginx_status
              port: status
      volumes:
        - name: nginx-conf
          configMap:
            name: helloworld-php
            items:
              - key: nginx.conf
                path: nginx.conf
